# Spider2

./: .env.example  .gitignore  Makefile  README.md  arctic.py  arctic_system_template.txt  arctic_user_template.txt  data_manipulation.py  db.py  llm.py  pyproject.toml  schema_E_commerce.txt  schema_template_omni.txt  start_vllm.py  start_vllm_qwen.py  stop_zvzv1919_processes.sh  utils.py
methods/spider-agent-lite/: .env.example  Makefile  pyproject.toml  setup.sh
methods/spider-agent-lite/spider_agent/agent/: agents.py  models.py
spider2/: __init__.py
spider2-lite/evaluation_suite/: evaluate_utils.py
